--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       }
     </style>
 
-<link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="./index.css">
+
   <script type="importmap">
 {
   "imports": {
